test/tests/stages/18_structures/valid/extra_credit/union_copy/unions_in_conditionals.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 1
        List[3]: 
          CMemberDeclaration: 
            TIdentifier: l
            Long: 
          CMemberDeclaration: 
            TIdentifier: i
            Int: 
          CMemberDeclaration: 
            TIdentifier: c
            Char: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: choose_union
        List[1]: 
          TIdentifier: flag
        CB: 
          List[5]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: one
                  None: 
                  Structure: 
                    TIdentifier: u
                    Bool: 1
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: two
                  None: 
                  Structure: 
                    TIdentifier: u
                    Bool: 1
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDot: 
                    TIdentifier: l
                    CVar: 
                      TIdentifier: one
                      None: 
                    None: 
                  CUnary: 
                    CNegate: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDot: 
                    TIdentifier: i
                    CVar: 
                      TIdentifier: two
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 100
                    None: 
                  None: 
            CS: 
              CReturn: 
                CDot: 
                  TIdentifier: c
                  CConditional: 
                    CVar: 
                      TIdentifier: flag
                      None: 
                    CVar: 
                      TIdentifier: one
                      None: 
                    CVar: 
                      TIdentifier: two
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CFunctionCall: 
                    TIdentifier: choose_union
                    List[1]: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                    None: 
                  CUnary: 
                    CNegate: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CFunctionCall: 
                    TIdentifier: choose_union
                    List[1]: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 100
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
